name: robbed
version: 0.1.0
synopsis: A reduced ordered BDD package
license: BSD3
license-file: LICENSE
author: Tristan Ravitch
maintainer: travitch@cs.wisc.edu
category: Data
build-type: Simple
cabal-version: >=1.10
stability: experimental

-- description:
-- extra-source-files:

library
  default-language: Haskell2010
  hs-source-dirs: src
  exposed-modules: Data.ROBDD, Data.ROBDD.Visualization
  build-depends: unordered-containers > 0.1.2,
                 hashable, containers,
                 base == 4.*, mtl == 2.*,
                 fgl, graphviz
  other-modules: Data.ROBDD.BooleanFunctions,
                 Data.ROBDD.Types
  ghc-options: -Wall -funbox-strict-fields

test-suite quant-tests
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  main-is: QuantTests.hs
  hs-source-dirs: tests
  ghc-options: -Wall -funbox-strict-fields
  build-depends: robbed, containers,
                 base > 3 && < 5,
                 boolean-formula-simple,
                 HUnit,
                 QuickCheck > 2.4,
                 test-framework,
                 test-framework-hunit,
                 test-framework-quickcheck2
