name: robbed
version: 0.1.0
synopsis: A reduced ordered binary decision diagram package
license: BSD3
license-file: LICENSE
author: Tristan Ravitch
maintainer: tristan@nochair.net
category: Data
build-type: Simple
cabal-version: >=1.10
stability: experimental
extra-source-files: README.md
tested-with: GHC == 7.4.2, GHC == 7.6.3, GHC == 7.8.4, GHC == 7.10.2

description: This package implements reduced ordered binary decision
             diagrams (ROBDDs) in pure Haskell.  The main
             documentation is in Data.ROBDD.  This implementation
             performs well up to about 70 variables per formula,
             depending on the resulting structure.

library
  default-language: Haskell2010
  hs-source-dirs: src
  exposed-modules: Data.ROBDD, Data.ROBDD.Visualization
  build-depends: base == 4.*,
                 containers,
                 hashable,
                 mtl == 2.*,
                 unordered-containers > 0.2.3 && < 0.3,
                 fgl >= 5.5 && < 5.6,
                 graphviz >= 2999.18 && < 2999.19
  other-modules: Data.ROBDD.BooleanFunctions,
                 Data.ROBDD.Types
  ghc-options: -Wall -funbox-strict-fields

test-suite quant-tests
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  main-is: QuantTests.hs
  hs-source-dirs: tests
  ghc-options: -Wall -funbox-strict-fields
  build-depends: robbed, containers,
                 base > 3 && < 5,
                 parsec,
                 HUnit,
                 QuickCheck > 2.4,
                 test-framework,
                 test-framework-hunit,
                 test-framework-quickcheck2

source-repository head
  type: git
  location: https://github.com/travitch/robbed
